JaCoP/src/JaCoP/fz/Parser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Parser.java */
package JaCoP.fz;

import java.util.ArrayList;
import JaCoP.core.Store;

public class Parser/*@bgen(jjtree)*/implements ParserTreeConstants, ParserConstants {/*@bgen(jjtree)*/
  protected JJTParserState jjtree = new JJTParserState();Store store = new Store();
    Tables dict = new Tables(store);
    VariablesParameters cg = new VariablesParameters();
    Constraints cc = new Constraints(store);
    Solve solver = new Solve(store);
    Options options;

    void setOptions(Options opt) {
        options = opt;
    }

    Store getStore() {
        return store;
    }

/************************************************************** 
*
*      GRAMMER STARTS
*
***************************************************************/

//---------------------------------------------------------------------------
// Model top-level
//---------------------------------------------------------------------------

// model          : pred_decl_items var_decl_items constraint_items model_end
  final public void model() throws ParseException {
 /*@bgen(jjtree) model */
  ASTmodel jjtn000 = new ASTmodel(this, JJTMODEL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      pred_decl_items();
      var_decl_items();
      constraint_items();
      model_end();
      jj_consume_token(0);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

// pred_decl_items : pred_decl_items pred_decl_item ';'
//                 | pred_decl_items error ';' { yyerrok; }
// 		| /* empty */
  final public void pred_decl_items() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PREDICATE:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      pred_decl_item();
      jj_consume_token(SC);
    }
  }

// var_decl_items : var_decl_items var_decl_item ';'
//                | /* empty */
  final public void var_decl_items() throws ParseException {
 /*@bgen(jjtree) VarDeclItems */
  ASTVarDeclItems jjtn000 = new ASTVarDeclItems(this, JJTVARDECLITEMS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT_LITERAL:
        case FLOAT_LITERAL:
        case LB:
        case ARRAY:
        case BOOL:
        case FLOAT:
        case INT:
        case SET:
        case VAR:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        var_decl_item();
        jj_consume_token(SC);
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            //jjtThis.dump("");
            jjtn000.removeChildren();
            solver.setNumberBoolVariables(cg.numberBooleanVariables);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

// constraint_items: constraint_items constraint_item ';'
//                | /* empty */
  final public void constraint_items() throws ParseException {
 /*@bgen(jjtree) ConstraintItems */
  ASTConstraintItems jjtn000 = new ASTConstraintItems(this, JJTCONSTRAINTITEMS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CONSTRAINT:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        constraint_item();
        jj_consume_token(SC);
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
           //jjtThis.dump("");

            cc.poseDelayedConstraints();

            jjtn000.removeChildren();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

// model_end      : solve_item ';'
//                | solve_item ';' output_item ';'
  final public void model_end() throws ParseException {
 /*@bgen(jjtree) ModelEnd */
  ASTModelEnd jjtn000 = new ASTModelEnd(this, JJTMODELEND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      solve_item();
      jj_consume_token(SC);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OUTPUT:
        output_item();
        jj_consume_token(SC);
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

//---------------------------------------------------------------------------
// Items
//---------------------------------------------------------------------------

// pred_decl_item:
//     PREDICATE IDENT '(' pred_decl_args ')'
  final public void pred_decl_item() throws ParseException {
    jj_consume_token(PREDICATE);
    jj_consume_token(IDENT);
    jj_consume_token(LP);
    pred_decl_args();
    jj_consume_token(RP);
  }

// var_decl_item:
//     VAR    non_array_ti_expr_tail ':' ident_anns var_decl_item2
//   |        non_array_ti_expr_tail ':' ident_anns '=' non_array_flat_expr
//   | ARRAY '[' INT_LITERAL DOTDOT INT_LITERAL ']' OF array_decl_tail
  final public void var_decl_item() throws ParseException {
 /*@bgen(jjtree) VarDeclItem */
    ASTVarDeclItem jjtn000 = new ASTVarDeclItem(this, JJTVARDECLITEM);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t, t1, t2;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        jj_consume_token(VAR);
        non_array_ti_expr_tail();
        jj_consume_token(COLON);
        t = ident_anns();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ASGN:
          jj_consume_token(ASGN);
          non_array_flat_expr();
          break;
        default:
          jj_la1[4] = jj_gen;
          ;
        }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            jjtn000.setKind(0); jjtn000.setId(t.image);
            cg.generateVariables(jjtn000, dict, store);
            jjtn000.removeChildren();
        break;
      case INT_LITERAL:
      case FLOAT_LITERAL:
      case LB:
      case BOOL:
      case FLOAT:
      case INT:
      case SET:
        non_array_ti_expr_tail();
        jj_consume_token(COLON);
        t = ident_anns();
        jj_consume_token(ASGN);
        non_array_flat_expr();
           jjtree.closeNodeScope(jjtn000, true);
           jjtc000 = false;
           jjtn000.setKind(1);
           jjtn000.setId(t.image);
           cg.generateParameters(jjtn000, dict);
           jjtn000.removeChildren();
        break;
      case ARRAY:
        jj_consume_token(ARRAY);
        jj_consume_token(LBOX);
        t1 = jj_consume_token(INT_LITERAL);
        jj_consume_token(DOTDOT);
        t2 = jj_consume_token(INT_LITERAL);
        jj_consume_token(RBOX);
        jj_consume_token(OF);
        array_decl_tail(jjtn000);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
              jjtn000.setIndexes(Integer.parseInt(t1.image), Integer.parseInt(t2.image));
              cg.generateArray(jjtn000, dict, store);
              jjtn000.removeChildren();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

// var_decl_item2:
//     '=' non_array_flat_expr
//   | /*empty*/

// void var_decl_item2() :
// {}
// {
//     [ <ASGN> non_array_flat_expr() ]
// }

// array_decl_tail:
//         non_array_ti_expr_tail ':' ident_anns '=' array_literal
//   | VAR non_array_ti_expr_tail ':' ident_anns array_decl_tail2
  final public void array_decl_tail(ASTVarDeclItem v) throws ParseException {
 Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT_LITERAL:
    case FLOAT_LITERAL:
    case LB:
    case BOOL:
    case FLOAT:
    case INT:
    case SET:
      non_array_ti_expr_tail();
      jj_consume_token(COLON);
      t = ident_anns();
      jj_consume_token(ASGN);
      array_literal();
      v.setKind(3);
      break;
    case VAR:
      jj_consume_token(VAR);
      non_array_ti_expr_tail();
      jj_consume_token(COLON);
      t = ident_anns();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASGN:
        jj_consume_token(ASGN);
        array_literal();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
          v.setKind(2);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         v.setId(t.image);
  }

// array_decl_tail2:
//     '=' array_literal
//   | /*empty*/

// void array_decl_tail2() :
// {}
// {
//     [ <ASGN> array_literal() ]
// }

// ident_anns:
//     IDENT annotations
  final public Token ident_anns() throws ParseException {
 Token t;
    t = jj_consume_token(IDENT);
    annotations();
         {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

// constraint_item:
//     CONSTRAINT constraint_elem annotations
  final public void constraint_item() throws ParseException {
 /*@bgen(jjtree) Constraint */
  ASTConstraint jjtn000 = new ASTConstraint(this, JJTCONSTRAINT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CONSTRAINT);
      constraint_elem();
      annotations();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

// constraint_elem:
//     IDENT '(' flat_exprs ')'
// |   variable_expr
  final public void constraint_elem() throws ParseException {
 /*@bgen(jjtree) ConstElem */
 ASTConstElem jjtn000 = new ASTConstElem(this, JJTCONSTELEM);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      if (jj_2_1(2)) {
        t = jj_consume_token(IDENT);
        jj_consume_token(LP);
        flat_exprs();
        jj_consume_token(RP);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
     jjtn000.setName(t.image);
     cc.generateConstraints(jjtn000, dict);
     jjtn000.removeChildren();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENT:
          variable_expr();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        cc.generateVarConstraint(jjtn000, dict);
        jjtn000.removeChildren();
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

// solve_item:
//     SOLVE annotations solve_kind
  final public void solve_item() throws ParseException {
 /*@bgen(jjtree) SolveItem */
  ASTSolveItem jjtn000 = new ASTSolveItem(this, JJTSOLVEITEM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SOLVE);
      annotations();
      solve_kind();
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            solver.search(jjtn000, dict, options);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

// solve_kind:
//     SATISFY
//   | MINIMIZE solve_expr
//   | MAXIMIZE solve_expr
  final public void solve_kind() throws ParseException {
 /*@bgen(jjtree) SolveKind */
 ASTSolveKind jjtn000 = new ASTSolveKind(this, JJTSOLVEKIND);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SATISFY:
        t = jj_consume_token(SATISFY);
        break;
      case MINIMIZE:
        t = jj_consume_token(MINIMIZE);
        solve_expr();
        break;
      case MAXIMIZE:
        t = jj_consume_token(MAXIMIZE);
        solve_expr();
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
         jjtn000.setKind(t.image);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

// output_item:
//     OUTPUT '[' output_elems ']'
  final public void output_item() throws ParseException {
    jj_consume_token(OUTPUT);
    jj_consume_token(LBOX);
    output_elems();
    jj_consume_token(RBOX);
  }

// output_elems:
//     output_elem ',' output_elems
//   | output_elem
  final public void output_elems() throws ParseException {
    output_elem();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      output_elem();
    }
  }

// output_elem:
//     SHOW '(' flat_expr ')'
//   | SHOW_COND '(' flat_expr ',' flat_expr ',' flat_expr ')'
//   | STRING_LITERAL
  final public void output_elem() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SHOW:
      jj_consume_token(SHOW);
      jj_consume_token(LP);
      flat_expr();
      jj_consume_token(RP);
      break;
    case SHOW_COND:
      jj_consume_token(SHOW_COND);
      jj_consume_token(LP);
      flat_expr();
      jj_consume_token(COMMA);
      flat_expr();
      jj_consume_token(COMMA);
      flat_expr();
      jj_consume_token(RP);
      break;
    case STRING_LITERAL:
      jj_consume_token(STRING_LITERAL);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//---------------------------------------------------------------------------
// Predicate parameters
//---------------------------------------------------------------------------

// pred_decl_args:
//     pred_decl_arg "," pred_decl_args
//   | pred_decl_arg
  final public void pred_decl_args() throws ParseException {
    pred_decl_arg();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      pred_decl_arg();
    }
  }

// pred_decl_arg:
//      non_array_ti_expr_tail ':' IDENT
//    | VAR non_array_ti_expr_tail ':' IDENT
//    | ARRAY '[' pred_arg_array_index ']' OF  pred_arg_array_tail ':' IDENT
  final public void pred_decl_arg() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT_LITERAL:
    case FLOAT_LITERAL:
    case LB:
    case BOOL:
    case FLOAT:
    case INT:
    case SET:
      non_array_ti_expr_tail();
      jj_consume_token(COLON);
      jj_consume_token(IDENT);
      break;
    case VAR:
      jj_consume_token(VAR);
      non_array_ti_expr_tail();
      jj_consume_token(COLON);
      jj_consume_token(IDENT);
      break;
    case ARRAY:
      jj_consume_token(ARRAY);
      jj_consume_token(LBOX);
      pred_arg_array_index();
      jj_consume_token(RBOX);
      jj_consume_token(OF);
      pred_arg_array_tail();
      jj_consume_token(COLON);
      jj_consume_token(IDENT);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// pred_arg_array_index:
//     INT
//   | INT_LITERAL DOTDOT INT_LITERAL
  final public void pred_arg_array_index() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
      break;
    case INT_LITERAL:
      jj_consume_token(INT_LITERAL);
      jj_consume_token(DOTDOT);
      jj_consume_token(INT_LITERAL);
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// pred_arg_array_tail:
//     non_array_ti_expr_tail
//   | VAR non_array_ti_expr_tail
  final public void pred_arg_array_tail() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT_LITERAL:
    case FLOAT_LITERAL:
    case LB:
    case BOOL:
    case FLOAT:
    case INT:
    case SET:
      non_array_ti_expr_tail();
      break;
    case VAR:
      jj_consume_token(VAR);
      non_array_ti_expr_tail();
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//---------------------------------------------------------------------------
// Type-Inst Expression Tails
//---------------------------------------------------------------------------

// non_array_ti_expr_tail:
//     scalar_ti_expr_tail
//   | set_ti_expr_tail
  final public void non_array_ti_expr_tail() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT_LITERAL:
    case FLOAT_LITERAL:
    case LB:
    case BOOL:
    case FLOAT:
    case INT:
      scalar_ti_expr_tail();
      break;
    case SET:
      set_ti_expr_tail();
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// scalar_ti_expr_tail:
//     bool_ti_expr_tail
//   | int_ti_expr_tail
//   | float_ti_expr_tail
  final public void scalar_ti_expr_tail() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOL:
      bool_ti_expr_tail();
      break;
    case INT_LITERAL:
    case LB:
    case INT:
      int_ti_expr_tail();
      break;
    case FLOAT_LITERAL:
    case FLOAT:
      float_ti_expr_tail();
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// bool_ti_expr_tail:
//     BOOL
  final public void bool_ti_expr_tail() throws ParseException {
 /*@bgen(jjtree) BoolTiExprTail */
  ASTBoolTiExprTail jjtn000 = new ASTBoolTiExprTail(this, JJTBOOLTIEXPRTAIL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(BOOL);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }
